[gd_scene load_steps=11 format=3 uid="uid://c8cjoh56b25jk"]

[ext_resource type="Script" path="res://Character/ThirdPerson/CharacterController.gd" id="1_n2afy"]
[ext_resource type="Texture2D" uid="uid://cimfcakt4fd57" path="res://icon.png" id="2_px22e"]
[ext_resource type="Script" path="res://Character/PlayerItems/SprayGun/SprayCast.gd" id="3_tsg1e"]

[sub_resource type="CylinderMesh" id="CylinderMesh_veaop"]
top_radius = 0.0
bottom_radius = 0.2
height = 0.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_t3rjw"]
radius = 0.25
height = 1.65

[sub_resource type="CapsuleMesh" id="CapsuleMesh_5rtks"]
radius = 0.25
height = 1.65

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8tuno"]
albedo_color = Color(0.47451, 0.988235, 0.988235, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_wqdyt"]
top_radius = 0.0
bottom_radius = 0.141
height = 0.25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_64jua"]
albedo_color = Color(0.47451, 0.988235, 0.988235, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_t6c4u"]
radius = 0.1

[node name="Player" type="CharacterBody3D"]
collision_mask = 7
script = ExtResource( "1_n2afy" )

[node name="BaseDirIndicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1.34374, 0, 0, 0, -4.37114e-08, -0.230035, 0, 1, -1.00552e-08, 0, 0.144161, 0.25433)
mesh = SubResource( "CylinderMesh_veaop" )

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.86287, 0)
shape = SubResource( "CapsuleShape3D_t3rjw" )

[node name="PlayerMesh" type="Node3D" parent="."]

[node name="Shadow" type="Decal" parent="PlayerMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.293111, -0.800222, 0.00547981)
visible = false
extents = Vector3(1.63716, 0.982551, 1.97568)
texture_albedo = ExtResource( "2_px22e" )
upper_fade = 0.0630673
lower_fade = 1.52947
cull_mask = 1048574

[node name="CapsuleMesh" type="MeshInstance3D" parent="PlayerMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.86287, 0)
mesh = SubResource( "CapsuleMesh_5rtks" )
skeleton = NodePath("../..")
surface_material_override/0 = SubResource( "StandardMaterial3D_8tuno" )

[node name="ConeMesh" type="MeshInstance3D" parent="PlayerMesh"]
transform = Transform3D(5.96046e-08, 0, 1, 1, 5.96046e-08, 0, 0, 1, 5.96046e-08, 0, 1.24895, 0.325552)
mesh = SubResource( "CylinderMesh_wqdyt" )
skeleton = NodePath("../../CollisionShape3D")
surface_material_override/0 = SubResource( "StandardMaterial3D_64jua" )

[node name="SprayCast" type="RayCast3D" parent="PlayerMesh"]
transform = Transform3D(-1, 0, 0, 0, 0, -1, 0, -1, 0, 0, 1.24253, -0.00333973)
target_position = Vector3(0, -7.146, 0)
collision_mask = 14
debug_shape_custom_color = Color(0.847059, 0.211765, 0.847059, 1)
debug_shape_thickness = 5
script = ExtResource( "3_tsg1e" )

[node name="Proxy_FPS" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)

[node name="Proxy_Over" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.81784, 0)

[node name="Proxy_Right" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.04945, 1.20752, 0)

[node name="Proxy_Left" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.979953, 1.20752, 0)

[node name="Proxy_Back" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.291, -0.41629)

[node name="CameraRig" type="Node3D" parent="."]

[node name="Target" type="Node3D" parent="CameraRig"]

[node name="SpringArm3D" type="SpringArm3D" parent="CameraRig/Target"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
collision_mask = 16777214
shape = SubResource( "SphereShape3D_t6c4u" )
spring_length = 3.0

[node name="Camera3D" type="Camera3D" parent="CameraRig/Target/SpringArm3D"]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0, 2.54461)

[node name="Name" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.91886, 0)
billboard = 1
no_depth_test = true
text = "<name>"
